--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                     </div>
                     <div>
                         <p class="blog-title ">Transfer </p>
-                        <h4>Transfer Live: Chlesea in talks over Kimpenbe Transfer</h4>
+                        <h4>Transfer Live: Chlesea in talks
+
+                            <br> over Kimpenbe Transfer</h4>
                     </div>
                     <div class="blog-info ">
                         <div>
